fixed pixel perfect on tablet format

--- a/css/index.css
+++ b/css/index.css
@@ -75,7 +75,6 @@ h1, h2, h3, h4, h5 {
 @media (max-width: 800px) {
     .container {
         width: 95%;
-        margin: auto;
     }
 }
 
@@ -125,7 +124,7 @@ header nav {
         display: flex;
         justify-content: space-between;
         margin: 40px;
-        padding-right: 40px;
+        padding-right: 42px;
         padding-left: 10px;
     }
 }
@@ -175,7 +174,7 @@ header .logo {
 @media (max-width: 800px) {
     header .logo {
         order: -1;
-        margin: 28px 0 0 0;
+        margin: 30px 0 0 0;
     }
 }
 
@@ -197,7 +196,7 @@ header .logo {
 @media (max-width: 800px) {
     .cta {
         justify-content: center;
-        margin-top: 35px;
+        margin-top: 32px;
     }
 }
 
@@ -266,8 +265,10 @@ header .logo {
 
 @media (max-width: 800px) {
     .main-content {
-        margin: 75px 10px 38px 10px;
-        padding-bottom: 55px;
+        width: 100%;
+        margin: 75px 0px 38px 0px;
+        padding-bottom: 35px;
+        padding-top: 12px;
     }
 }
 
@@ -304,7 +305,8 @@ header .logo {
 @media (max-width: 800px) {
     .main-content .middle-img {
         width: 100%;
-        margin: 45px 0 30px 0;
+        margin: 5px 10px 30px 0;
+
     }
 }
 
@@ -321,6 +323,7 @@ header .logo {
     .main-content .bottom-content {
         display: flex;
         flex-direction: row;
+        justify-content: flex-start;
     }
 }
 
@@ -335,8 +338,14 @@ header .logo {
     .top-content .text-content {
         margin-top: 22px;
         margin-bottom: 25px;
+        padding-left: 10px;
     }
 }
+
+@media (max-width: 800px) {
+    .bottom-content .text-content {
+        padding-left: 10px;
+    }
 
 @media (max-width: 500px) {
     .bottom-content .text-content {
@@ -348,15 +357,23 @@ header .logo {
         margin-bottom: 0px;
     }
 }
+
+
 .main-content .bottom-content p {
     padding-right: 20px;
 }
 
-/* @media (max-width: 800px) {
+@media (max-width: 800px) {
+    .main-content .top-content p {
+        padding-right: 10px;
+    }
+}
+@media (max-width: 800px) {
     .main-content .bottom-content p {
         padding-right: 30px;
     }
-} */
+}
+
 
 
 /* Contact Styles */
@@ -372,6 +389,11 @@ footer {
     margin: 40px 0 20px;
 }
 
+@media (max-width: 800px) {
+    .contact {
+        margin: 30px 20px 0 10px;
+    }
+}
 
 @media (max-width: 500px) {
     .contact {
